--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.1.1"
+    "socket.io": "^4.1.1",
+    "venom-bot": "^3.0.16"
   }
 }
